MISC: update SQL README

--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,9 @@
                     </plugin>
                 </plugins>
             </build>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
         </profile>
     </profiles>
 
